# Model-Doctor

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  fix_severities.py  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  question.yml
.github/workflows/: docs.yml
api/core/: index.html
api/models/: index.html
api/prescriptions/: index.html
concepts/findings/: index.html
contributing/: index.html
docs/: architecture.md  changelog.md  confidence-engine.md  contributing.md  custom-doctors.md  dashboard.md  diagnose.md  doctors.md  evidence-engine.md  faq.md  index.md  mlflow.md  prescription-engine.md  quickstart.md  reporting.md  risk-engine.md  roadmap.md  troubleshooting.md  validation.md
docs/api/: context.md  core.md  doctors.md  models.md  prescriptions.md  reference.md  report.md  validation.md
docs/concepts/: diagnostic-doctors.md  evaluation-context.md  findings.md  health-score.md  prescriptions.md  reports.md
docs/examples/: advanced.md  basic.md
docs/getting-started/: cli.md  dashboard.md  installation.md  quickstart.md
docs/guides/: calibration.md  classification.md  comparison.md  dashboard-customization.md  explainability.md  mlflow.md  plugins.md  regression.md
examples/: 01_basic_classification.py  02_basic_regression.py  03_dashboard.py  04_html_report.py  05_json_export.py  06_pdf_export.py  07_mlflow_logging.py  08_custom_doctor.py  09_prescription_engine.py  10_validation_runner.py  11_model_comparison.py  12_probability_calibration.py  13_data_leakage_detection.py  14_overfitting_analysis.py  15_production_readiness.py  README.md  classification_example.py  model_health_report.json  run_tests.ps1  utils.py
examples/advanced/: index.html
examples/basic/: index.html
getting-started/cli/: index.html
getting-started/installation/: index.html
guides/calibration/: index.html
guides/classification/: index.html
guides/comparison/: index.html
guides/explainability/: index.html
guides/regression/: index.html
mlflow/: index.html
modeldoctor/: __init__.py  api.py  cli.py
modeldoctor/config/: __init__.py  settings.py
modeldoctor/core/: __init__.py  base_doctor.py  comparison.py  context.py  explainability.py  pipeline.py  profile.py  registry.py  task_detector.py
modeldoctor/diagnosis/: __init__.py  adapters.py  confidence.py  evidence.py  risk.py  rules.py
modeldoctor/doctors/: __init__.py  calibration.py  data_doctor.py  feature_doctor.py  generalization_doctor.py  hyperparameter_doctor.py  leakage_doctor.py  overfitting_doctor.py  prediction_doctor.py  production_doctor.py
modeldoctor/integrations/: __init__.py  mlflow.py
modeldoctor/models/: __init__.py  diagnosis.py  enums.py  health.py  metadata.py  recommendation.py  report.py
modeldoctor/prescription/: __init__.py  engine.py  knowledge_base.py  rules.py
modeldoctor/reporting/: __init__.py  base_renderer.py  markdown_renderer.py  review_generator.py  server.py
modeldoctor/scoring/: __init__.py  health_scorer.py
modeldoctor/utils/: __init__.py  compat.py  logging.py  stats.py
modeldoctor/validation/: datasets.py  runner.py
quickstart/: index.html
reporting/: index.html
risk-engine/: index.html
roadmap/: index.html
site/: 404.html  index.html
site/architecture/: index.html
site/changelog/: index.html
site/cli/: index.html
site/confidence-engine/: index.html
site/custom-doctors/: index.html
tests/: test_engines.py  test_new_features.py
troubleshooting/: index.html
validation/: README.md  benchmark_report.py  benchmark_runner.py  index.html  metrics.py  registry.py  scenario.py  validation_summary.py
(+46 files in other folders)
